--- a/src/view/ModifyParts.fxml
+++ b/src/view/ModifyParts.fxml
@@ -82,6 +82,6 @@
             <Font size="14.0" />
         </font>
     </TextField>
-    <Button fx:id="buttonModifyPartSave" layoutX="260.0" layoutY="402.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Save" />
-    <Button fx:id="buttonModifyPartCancel" layoutX="340.0" layoutY="402.0" mnemonicParsing="false" onAction="#modifyPartCancelHandler" prefHeight="25.0" prefWidth="60.0" text="Cancel" />
+    <Button  layoutX="260.0" layoutY="402.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Save" />
+    <Button  layoutX="340.0" layoutY="402.0" mnemonicParsing="false" onAction="#modifyPartCancelHandler" prefHeight="25.0" prefWidth="60.0" text="Cancel" />
 </AnchorPane>
