--- a/src/view/AddProduct.fxml
+++ b/src/view/AddProduct.fxml
@@ -7,17 +7,17 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="503.0" prefWidth="798.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddProduct">
     <TableView fx:id="tableViewAddProductAdd" layoutX="346.0" layoutY="65.0" prefHeight="150.0" prefWidth="400.0">
         <columns>
-            <TableColumn fx:id="tableViewAddProductAddIDColumn" prefWidth="100.0" text="ID" />
-            <TableColumn fx:id="tableViewAddProductAddNameColumn" prefWidth="100.0" text="Name" />
-            <TableColumn fx:id="tableViewAddProductAddInvColumn" prefWidth="100.0" text="Inv." />
+            <TableColumn fx:id="tableViewAddProductAddIDColumn" prefWidth="100.0" text="Part ID" />
+            <TableColumn fx:id="tableViewAddProductAddNameColumn" prefWidth="100.0" text="Part Name" />
+            <TableColumn fx:id="tableViewAddProductAddInvColumn" prefWidth="100.0" text="Inventory" />
             <TableColumn fx:id="tableViewAddProductAddPriceColumn" prefWidth="100.0" text="Price" />
         </columns>
     </TableView>
     <TableView fx:id="tableViewAddProductDelete" layoutX="346.0" layoutY="265.0" prefHeight="150.0" prefWidth="400.0">
         <columns>
-            <TableColumn fx:id="tableViewAddProductDeleteIDColumn" prefWidth="100.0" text="ID" />
-            <TableColumn fx:id="tableViewAddProductDeleteNameColumn" prefWidth="100.0" text="Name" />
-            <TableColumn fx:id="tableViewAddProductDeleteInvColumn" prefWidth="100.0" text="Inv." />
+            <TableColumn fx:id="tableViewAddProductDeleteIDColumn" prefWidth="100.0" text="Part ID" />
+            <TableColumn fx:id="tableViewAddProductDeleteNameColumn" prefWidth="100.0" text="Part Name" />
+            <TableColumn fx:id="tableViewAddProductDeleteInvColumn" prefWidth="100.0" text="Inventory" />
             <TableColumn fx:id="tableViewAddProductDeletePriceColumn" prefWidth="100.0" text="Price" />
         </columns>
     </TableView>
@@ -31,13 +31,13 @@
     <Button layoutX="686.0" layoutY="221.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Add" />
     <Button layoutX="686.0" layoutY="425.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Delete" />
     <Button layoutX="686.0" layoutY="461.0" mnemonicParsing="false" onAction="#addProductCancelHandler" prefHeight="25.0" prefWidth="60.0" text="Cancel" />
-    <Button layoutX="617.0" layoutY="461.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Save" />
+    <Button layoutX="617.0" layoutY="461.0" mnemonicParsing="false" onAction="#saveProductHandler" prefHeight="25.0" prefWidth="60.0" text="Save" />
     <Label layoutX="20.0" layoutY="118.0" text="ID">
         <font>
             <Font size="15.0" />
         </font>
     </Label>
-    <Label alignment="CENTER" layoutX="77.0" layoutY="108.0" prefHeight="40.0" prefWidth="150.0" style="-fx-border-width: 1; -fx-border-color: black; -fx-border-style: solid; -fx-padding: 5;" text="Auto Gen - Disabled">
+    <Label fx:id="textFieldAddIdn" alignment="CENTER" layoutX="77.0" layoutY="108.0" prefHeight="40.0" prefWidth="150.0" style="-fx-border-width: 1; -fx-border-color: black; -fx-border-style: solid; -fx-padding: 5;" text="Auto Gen - Disabled">
         <font>
             <Font name="System Italic" size="14.0" />
         </font>
@@ -47,7 +47,7 @@
             <Font size="15.0" />
         </font>
     </Label>
-    <TextField layoutX="77.0" layoutY="161.0" prefHeight="40.0" prefWidth="150.0" promptText="Product Name">
+    <TextField fx:id="textFieldAddName" layoutX="77.0" layoutY="161.0" prefHeight="40.0" prefWidth="150.0" promptText="Product Name">
         <font>
             <Font name="System Italic" size="14.0" />
         </font>
@@ -57,7 +57,7 @@
             <Font size="15.0" />
         </font>
     </Label>
-    <TextField layoutX="77.0" layoutY="214.0" prefHeight="40.0" prefWidth="150.0" promptText="Inv">
+    <TextField fx:id="textFieldAddInventory" layoutX="77.0" layoutY="214.0" prefHeight="40.0" prefWidth="150.0" promptText="Inv">
         <font>
             <Font name="System Italic" size="14.0" />
         </font>
@@ -67,7 +67,7 @@
             <Font size="15.0" />
         </font>
     </Label>
-    <TextField layoutX="77.0" layoutY="267.0" prefHeight="40.0" prefWidth="150.0" promptText="Price">
+    <TextField fx:id="textFieldAddPrice" layoutX="77.0" layoutY="267.0" prefHeight="40.0" prefWidth="150.0" promptText="Price">
         <font>
             <Font name="System Italic" size="14.0" />
         </font>
@@ -77,7 +77,7 @@
             <Font size="15.0" />
         </font>
     </Label>
-    <TextField layoutX="77.0" layoutY="320.0" prefHeight="40.0" prefWidth="100.0" promptText="Min">
+    <TextField fx:id="textFieldAddMin" layoutX="77.0" layoutY="320.0" prefHeight="40.0" prefWidth="100.0" promptText="Min">
         <font>
             <Font name="System Italic" size="14.0" />
         </font>
@@ -87,7 +87,7 @@
             <Font size="15.0" />
         </font>
     </Label>
-    <TextField layoutX="226.0" layoutY="320.0" prefHeight="40.0" prefWidth="100.0" promptText="Max">
+    <TextField fx:id="textFieldAddMax" layoutX="226.0" layoutY="320.0" prefHeight="40.0" prefWidth="100.0" promptText="Max">
         <font>
             <Font name="System Italic" size="14.0" />
         </font>
